# ai-agent-wealth-builder

./: .env.example  .gitignore  .replit  ARCHITECTURE.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  MONITORING.md  QUICKSTART.md  README.md  SECURITY.md  TESTING.md  docker-compose.yml  main.py  pyproject.toml  replit.md
agents/grid-trader/: main.py
agents/perp-basis-trader/: main.py
src/: agent.py  ai_analyzer.py  dashboard.py  market_fetcher.py  ml_trainer.py  models.py  security.py  trade_executor.py
tests/: test_backtest.py  test_kelly.py  test_security.py  test_trade_executor.py
