[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.3",
    "openai>=2.20.0",
    "psycopg2-binary>=2.9.11",
    "py-clob-client>=0.34.5",
    "pytest>=9.0.2",
    "ratelimit>=2.2.1",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.46",
    "tenacity>=9.1.4",
    "web3>=7.14.1",
]
